--- a/config/package_binaries.nuspec
+++ b/config/package_binaries.nuspec
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
-        <id>Archetype</id>
+        <id>Archetype.Binaries</id>
         <version><%= version %></version>
         <title><%= name %></title>
         <authors>imulus, kgiszewski, tomfulton</authors>
         <owners>imulus, kgiszewski, tomfulton</owners>
         <projectUrl>http://github.com/imulus/archetype</projectUrl>
-        <description><![CDATA[Archetype for Umbraco]]></description>
+        <description><![CDATA[Archetype binaries for Umbraco]]></description>
         <tags>umbraco</tags>
         <iconUrl>http://github.com/imulus/archetype/raw/master/assets/logo.png</iconUrl>
         <licenseUrl><%= licenseUrl %></licenseUrl>
         <dependencies>
-            <dependency id="Archetype.Binaries" version="<%= version %>" />
+            <dependency id="UmbracoCms.Core" version="7.2.2" />
         </dependencies>
     </metadata>
 </package>
