--- a/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
+++ b/app/Umbraco/Archetype.Tests/Archetype.Tests.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyValueConverter\PropertyValueConverterTests.cs" />
     <Compile Include="PublishedContent\ArchetypePublishedContentTests.cs" />
+    <Compile Include="PublishedContent\TypeConverterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
