--- a/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
+++ b/app/Umbraco/Umbraco.Archetype/Archetype.Umbraco.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Api\ArchetypeDataTypeController.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Events\ExpireCache.cs" />
+    <Compile Include="Events\StartUp.cs" />
     <Compile Include="Extensions\ArchetypeFieldsetModelExtensions.cs" />
     <Compile Include="Extensions\ArchetypeHelper.cs" />
     <Compile Include="Extensions\ArchetypeModelExtensions.cs" />
@@ -250,6 +251,7 @@
     <Compile Include="Models\ArchetypePublishedContent.cs" />
     <Compile Include="Models\ArchetypePublishedContentSet.cs" />
     <Compile Include="Models\ArchetypePublishedProperty.cs" />
+    <Compile Include="Models\ArchetypeUpdateNotification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="PropertyConverters\ArchetypeValueConverter.cs" />
